<resources>
    <string name="app_name">Sales Man</string>
    <string name="logout_menu">logout</string>
    <string name="starting_kilometer">Click to upload\n Starting Kilometer</string>
    <string name="ending_kilometer">Click to upload\n Ending Kilometer</string>
    <string name="enter_ending_kilometer">Ending KM</string>
    <string name="enter_starting_kilometer">Starting KM</string>
    <string name="dis_previous_month">Excess Distance\nTravelled</string>
    <string name="dis_previous_day">Distance Travelled\n(Previous Day)</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="upload_image">Upload Image</string>
    <string name="meeting_progress">Meeting Progress</string>
    <string name="number_of_users">Number\nof users</string>
    <string name="hello">Hello World, CaptureSignatureActivity!</string>
    <string name="external_dir">GetSignature</string>
    <string name="total_amount">Total Expense</string>
    <string name="current_date">March, 2019</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">31</string>
    <string name="feedback_complain">Feedback/\nComplain</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogMessage">It must required to on the gps location in your mobile.</string>
    <string name="GPSAlertDialogTitle">Make on the GPS Location</string>
    <string-array name="special_request">
        <item>--select your request--</item>
        <item>Brochure</item>
        <item>Banner</item>
        <item>Pamphlet</item>
    </string-array>
    <string name="feedback_complaint">Feedback / Complaint</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="expense_list">Expense List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_report_map">Map</string>
    <string name="title_activity_route_maps">Map</string>
    <string name="no_visit">No Visit</string>
    <string name="num_1">1</string>
    <string name="visit">Visit</string>
    <string name="title_activity_order_maps">Map</string>
    <string name="sales_return">Sales Return</string>
    <string name="prospect_task">Prospect Task</string>
    <string name="customer_task">Customer Task</string>
    <string name="title_activity_maps_all">Map</string>
    <string name="update_shop_details">Update Shop Details</string>
    <string-array name="meeting_status">
        <item>--Meeting Status--</item>
        <item>Completed</item>
        <item>In Progress</item>
        <item>Pending</item>
    </string-array>
    <string-array name="lead_status">
        <item>--Lead Status--</item>
        <item>Completed</item>
        <item>In Progress</item>
        <item>Pending</item>
    </string-array>
    <string-array name="cold_status">
        <item>--Cold Call Status--</item>
        <item>Qualified</item>
        <item>Rejected</item>
    </string-array>
    <string-array name="expense_details">
        <item>--Expense Details--</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Mobile</item>
        <item>Parking</item>
        <item>Road Toll Fees</item>
        <item>Petty</item>
        <item>Cash</item>
        <item>Cleaning Items</item>
        <item>Petrol</item>
        <item>Others</item>
    </string-array>
    <string-array name="invoice_number">
        <item>--Select Invoice Number--</item>
        <item>INV001</item>
        <item>INV002</item>
        <item>INV003</item>
        <item>INV004</item>
        <item>INV005</item>
        <item>INV006</item>
        <item>INV007</item>
        <item>INV008</item>
        <item>INV009</item>
    </string-array>
    <string-array name="city_list">
        <item>--Select City--</item>
        <item>Bangalore</item>
        
        
        
        
        
        
        
    </string-array>
    <string-array name="payment_mode">
        <item>--Select Payment Mode--</item>
        <item>Cash</item>
        <item>NEFT</item>
        <item>Cheque</item>
    </string-array>
    <string-array name="spinner_login">
        <item>--select type--</item>
        <item>Sales Man</item>
        <item>Dispatcher</item>
    </string-array>
    <string-array name="spn_shop_status">
        <item>--select shop status--</item>
        <item>0 Shop Closed</item>
        <item>1 Shop Active</item>
        <item>2 Shop Inactive</item>
    </string-array>
    <string-array name="spinner_report_sales_manager">
        <item>--select area sales manager--</item>
        <item>Sales Manager A</item>
        <item>Sales Manager B</item>
        <item>Sales Manager C</item>
        <item>Sales Manager D</item>
    </string-array>
    <string-array name="spinner_report_salesman">
        <item>--select salesman--</item>
        <item>Customer A</item>
        <item>Customer B</item>
        <item>Customer C</item>
        <item>Customer D</item>
    </string-array>
    <string-array name="spinner_report_activity">
        <item>--select activity--</item>
        <item>Distance Upload</item>
        <item>Meeting</item>
        <item>New Order</item>
        <item>Lead Generation</item>
        <item>Receipt</item>
        <item>Cold Call</item>
        <item>Cash Collection</item>
        <item>Expenses</item>
    </string-array>
    <string-array name="task_status">
        <item>--select the status--</item>
        <item>Pending</item>
        <item>On Progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="str_arr_feedback">
        <item>--select type--</item>
        <item>Audio</item>
        <item>Video</item>
        <item>Text</item>
    </string-array>
    <string-array name="str_customer_status">
        <item>--select status--</item>
        <item>Convert to Customer</item>
        <item>Declined</item>
    </string-array>
    <string-array name="exp_type">
        <item>--select type--</item>
        <item>User</item>
        <item>Vehicle</item>
    </string-array>
    <string-array name="route_list">
        <item>--select route--</item>
        <item>Route A</item>
        <item>Route B</item>
        <item>Route D</item>
        <item>Route E</item>
        <item>Route F</item>
        <item>Route G</item>
        <item>Route H</item>
        <item>Route I</item>
    </string-array>
</resources>