<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/noticeTopMenu"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:layout_margin="@dimen/dimen_2dp"
                android:gravity="center"
                style="@style/tv_lin_hor"
                android:textColor="@color/white"
                android:background="@drawable/bg_color_red"
                android:text="@string/sales_return"/>
            <TextView
                android:layout_margin="@dimen/dimen_2dp"
                android:gravity="center"
                style="@style/tv_lin_hor"
                android:textColor="@color/white"
                android:background="@drawable/bg_color_green"
                android:text="@string/special_request"
                />
            <TextView
                android:id="@+id/tvNoticeRequestComplain"
                android:layout_margin="@dimen/dimen_2dp"
                android:gravity="center"
                style="@style/tv_lin_hor"
                android:textColor="@color/white"
                android:background="@drawable/bg_color_yellow"
                android:text="@string/feedback_complain"
                />

        </LinearLayout>
        <ScrollView
            android:layout_below="@+id/noticeTopMenu"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvNoticeRequestLabel"
                    android:gravity="center"
                    android:textColor="@color/green"
                    android:text="@string/special_request"
                    style="@style/tv_header" />
                <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="-12dp"
                    android:id="@+id/rvNoticeRequest"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/frag_notice_request_item"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>