<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:background="@drawable/bg_btn_main"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="Vehicle Number : "
        android:textSize="12sp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_distance_vehicleNumber"
        android:text="KA 01 AA 1989"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvDistancePrevious"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:text="0 Km"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="60dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/tv_distance_last_day_label"
            android:width="150dp"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_alignParentStart="true"
            android:text="@string/dis_previous_day"
            android:textColor="@color/black"
            android:minLines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:background="@drawable/bg_camera"
            android:layout_width="match_parent"
            android:layout_height="150dp">
        <ImageView
            android:layout_marginTop="16dp"
            android:id="@+id/iv_upload_start"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:padding="2dp"
            android:scaleType="fitXY"
            android:layout_height="match_parent" />
        </LinearLayout>
    <TextView
        android:textSize="12sp"
        android:id="@+id/tv_upload_start_label"
        android:width="150dp"
        android:gravity="center"
        android:text="@string/starting_kilometer"
        android:textColor="@color/colorPrimaryDark"
        android:minLines="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_distance_startKm"
        android:textStyle="bold"
         android:textSize="18sp"
        android:maxLength="4"
        android:gravity="center"
        android:layout_width="150dp"
        style="@style/et_main"
        android:hint="@string/enter_starting_kilometer"
        android:inputType="number"
        android:background="@drawable/bg_iv_dis"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
            android:id="@+id/tvDistanceExcess"
            android:background="@drawable/bg_et"
            android:gravity="center"
            android:text="0 Km"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:layout_width="60dp"
            android:layout_height="40dp" />

        <TextView
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_below="@id/tvDistanceExcess"
            android:id="@+id/tv_distance_last_month_label"
            android:width="150dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:text="@string/dis_previous_month"
            android:textColor="@color/black"
            android:minLines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

            <LinearLayout
                android:background="@drawable/bg_camera"
                android:layout_width="match_parent"
                android:layout_height="150dp">
        <ImageView
            android:padding="2dp"
            android:layout_marginTop="16dp"
            android:id="@+id/iv_upload_end"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_height="match_parent" />
            </LinearLayout>
    <TextView
        android:textSize="12sp"
        android:id="@+id/tv_upload_end_label"
        android:width="150dp"
        android:gravity="center"
        android:text="@string/ending_kilometer"
        android:textColor="@color/colorPrimaryDark"
        android:minLines="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_distance_endingKm"
        android:textStyle="bold"
        android:inputType="number"
        android:gravity="center"
        android:textSize="18sp"
        android:maxLength="4"
        style="@style/et_main"
        android:layout_width="150dp"
        android:hint="@string/enter_ending_kilometer"
        android:background="@drawable/bg_iv_dis"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:text="Start the trip"
        android:id="@+id/btn_distance_submitStart"
        style="@style/btn_main"/>
    <Button
        android:visibility="gone"
        android:text="End the trip"
        android:id="@+id/btn_distance_submitEnding"
        style="@style/btn_main"/>
</LinearLayout>
     </ScrollView>
</LinearLayout>