<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_margin="1dp"
        app:cardCornerRadius="8dp"
        android:layout_width="320dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/feedback_complaint"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <!--<RelativeLayout-->
                <!--android:id="@+id/rl_meeting_spinner_city"-->
                <!--style="@style/rl_spinner_main">-->
                <!--<Spinner-->
                    <!--android:id="@+id/spn_feedback"-->
                    <!--style="@style/spinner_main"-->
                    <!--android:layout_height="40dp"/>-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/ic_arrow_down"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_centerVertical="true"/>-->
            <!--</RelativeLayout>-->
            <TextView
                android:layout_marginTop="16dp"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:text="Optional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <TextView
        android:id="@+id/tv_feedback_audio"
        android:paddingEnd="2dp"
        android:paddingStart="4dp"
        android:text="@string/audio"
        android:drawableLeft="@drawable/ic_white_mic"
        android:background="@drawable/bg_btn_main"
        android:layout_margin="1dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/tv_feedback_video"
        android:paddingEnd="2dp"
        android:paddingStart="4dp"
        android:text="@string/video"
        android:drawableLeft="@drawable/ic_white_videocam"
        android:background="@drawable/bg_btn_main"
        android:layout_margin="1dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_height="match_parent" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_sales_photo_add"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/iv_feedback_image"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:layout_height="match_parent" />
                </FrameLayout>
</LinearLayout>
    <TextView
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:text="Remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_feedback"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:background="@drawable/bg_et"
        android:minLines="5"
        android:gravity="start"
        android:inputType="textCapCharacters"
        android:padding="5dp"
        android:hint="Remarks"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_feedback"
        style="@style/btn_main"
        android:background="@drawable/bg_btn_main"
        />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>